// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validate should be able to wrap invalid nodes - 2 1`] = `
{
  "content": [
    {
      "content": [
        {
          "marks": [
            {
              "attrs": {
                "originalNode": {
                  "type": "code",
                },
              },
              "type": "unknown",
            },
            {
              "type": "underline",
            },
          ],
          "text": "Foo",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`validate should be able to wrap invalid nodes - 2 2`] = `
{
  "content": [
    {
      "content": [
        {
          "marks": [
            {
              "type": "code",
            },
            {
              "type": "underline",
            },
          ],
          "text": "Foo",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`validate should be able to wrap invalid nodes 1`] = `
{
  "content": [
    {
      "content": [
        {
          "marks": [
            {
              "type": "strong",
            },
          ],
          "text": "Hello",
          "type": "text",
        },
        {
          "attrs": {
            "originalNode": {
              "text": " world!",
              "type": "tet",
            },
          },
          "type": "unknown",
        },
        {
          "marks": [
            {
              "type": "strong",
            },
          ],
          "text": "World!",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`validate should be able to wrap invalid nodes 2`] = `
{
  "content": [
    {
      "content": [
        {
          "marks": [
            {
              "type": "strong",
            },
          ],
          "text": "Hello",
          "type": "text",
        },
        {
          "text": " world!",
          "type": "tet",
        },
        {
          "marks": [
            {
              "type": "strong",
            },
          ],
          "text": "World!",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`validate should not remove valid marks 1`] = `
{
  "content": [
    {
      "content": [
        {
          "marks": [
            {
              "type": "code",
            },
          ],
          "text": "Hello",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`validate should not remove valid marks 2`] = `
{
  "content": [
    {
      "content": [
        {
          "marks": [
            {
              "type": "code",
            },
          ],
          "text": "Hello",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`validator should take custom list of nodes 1`] = `
{
  "content": [
    {
      "attrs": {
        "originalNode": {
          "content": [],
          "type": "paragraph",
        },
      },
      "type": "unknown",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;
